--- a/clarion-app/package.json
+++ b/clarion-app/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@primer/css": "^19.2.0",
     "@primer/octicons-react": "^13.0.0",
     "@primer/react": "^34.1.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@tauri-apps/api": "^1.0.0-beta.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -13,8 +15,10 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
