--- a/clarion-app/package.json
+++ b/clarion-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.3.1",
     "@primer/css": "^19.2.0",
     "@primer/octicons-react": "^13.0.0",
     "@primer/react": "^34.1.0",
