--- a/clarion-app/package.json
+++ b/clarion-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "sharp": "^0.29.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
