--- a/orchestra-app/src-tauri/Cargo.toml
+++ b/orchestra-app/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "1.0.0-beta.4" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { path = "../../../tauri/tauri/core/tauri", features = ["api-all"] }
-clarion_lib = { path = "../../clarion-lib/" }
+orchestra_lib = { path = "../../orchestra-lib/" }
 tungstenite = "0.16.0"
 
 [features]
