--- a/orchestra-desktop/package.json
+++ b/orchestra-desktop/package.json
@@ -10,7 +10,7 @@
     "@primer/octicons-react": "^13.0.0",
     "@primer/react": "^34.1.0",
     "@reduxjs/toolkit": "^1.7.1",
-    "@tauri-apps/api": "^1.0.0-beta.8",
+    "@tauri-apps/api": "^1.0.0-rc.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
