--- a/orchestra-lib/Cargo.toml
+++ b/orchestra-lib/Cargo.toml
@@ -14,6 +14,7 @@ opentelemetry-jaeger = "0.15.0"
 serde = "1"
 serde_json = "1"
 serde_derive = "1"
+ripemd = "0.1.1"
 
 [dependencies.kompact]
 version = "0.11.0"
