--- a/orchestra-desktop/src-tauri/Cargo.toml
+++ b/orchestra-desktop/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "Orchestra"
-version = "0.1.0"
+version = "0.1.1"
 description = "Development Studio designed for the Stacks blockchain"
 authors = ["Ludo Galabru <ludo@hiro.so>"]
 license = "GPL-3.0"
@@ -18,7 +18,7 @@ tauri-build = { version = "1.0.0-rc.4", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { path = "../../../tauri/tauri/core/tauri", features = ["api-all"] }
+tauri = { path = "../../../tauri/tauri/core/tauri", features = ["api-all", "updater"] }
 orchestra_lib = { path = "../../orchestra-lib/" }
 tungstenite = "0.17.2"
 reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
